Fix z-index

--- a/src/themes/oneui/base-variables/_misc.scss
+++ b/src/themes/oneui/base-variables/_misc.scss
@@ -7,7 +7,7 @@ $progress-label-color: var(--color-background) !default;
 
 // Drawer variables
 $drawer-width: 400px;
-$drawer-z-index: 700;
+$drawer-z-index: 800;
 $drawer-head-background-color: #333 !default;
 $drawer-expand-active-background-color: #797777 !default;
 $drawer-expand-hover-background-color: #565656 !default;
